<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegistrosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lbl_registro"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_idciclo"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spCiclos"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:theme="@style/CicloSpinner"
                android:text="@string/lbl_ciclos_select" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:text="@string/txt_idcurso"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="200dp">
                <Spinner
                    android:id="@+id/spCursos"
                    android:layout_width="194dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:theme="@style/CicloSpinner"
                    android:text="@string/lbl_ciclos_select" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:text="@string/txt_idalumno"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="200dp">

                <Spinner
                    android:id="@+id/spAlumnos"
                    android:layout_width="194dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:theme="@style/CicloSpinner"
                    android:text="@string/lbl_ciclos_select" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRegistrar"
                android:background="@drawable/diseno_boton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/btn_registrar"/>
            <Button
                android:id="@+id/btnNotasAlumno"
                android:background="@drawable/diseno_boton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/btn_notas"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>