<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="28dp">
            <Button
                android:id="@+id/btnCursos"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginRight="160dp"
                android:text="@string/btn_cursos"/>
            <Button
                android:id="@+id/btnNotas"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginRight="160dp"
                android:text="@string/btn_notas"/>
            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginRight="160dp"
                android:text="@string/btn_registros"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="50dp">

            <Button
                android:background="@drawable/diseno_boton"
                android:id="@+id/btnCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/btn_cerrarsesion"/>

            <TextView
                android:id="@+id/lblTipoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginRight="80dp"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:text="@string/lbl_profesor" />

            <EditText
                android:background="@drawable/diseno_boton"
                android:id="@+id/txtNombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:layout_marginRight="40dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:inputType="text"
                android:text="" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>