<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CursosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_curso1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblCurso1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/diseno_boton"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_curso2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblCurso2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/diseno_boton"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_curso3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblCurso3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/diseno_boton"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_curso4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblCurso4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/diseno_boton"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <Button
                android:background="@drawable/diseno_boton"
                android:id="@+id/btnMenu"
                android:layout_width="200dp"
                android:layout_marginLeft="100dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_menu" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>