<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <ImageView
            android:id="@+id/ivLogo"
            android:background="@drawable/uapp"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="31dp"
                android:layout_height="56dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:src="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtUsuario"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_usuario"
                    android:maxLength="5"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="31dp"
                android:layout_height="34dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:src="@drawable/candado" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/txtClave"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:hint="@string/txt_clave"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnIngresar"
                android:background="@drawable/diseno_boton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/btn_ingresar"/>
            <Button
                android:id="@+id/btnSalir"
                android:background="@drawable/diseno_boton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/btn_salir"/>
        </LinearLayout>
        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_copyright"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>